--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "animate.css": "^3.7.0",
+    "aos": "^3.0.0-beta.6",
     "nuxt": "^2.6.3",
     "vuetify": "^1.5.5",
     "vuetify-loader": "^1.2.1"
