final update done

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxty",
+  "name": "AAKRUTI2019",
   "version": "1.0.0",
   "description": "My striking Nuxt.js project",
   "author": "SKR",
