--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
+    "@nuxtjs/vuetify": "^1.0.0-beta.8",
     "animate.css": "^3.7.0",
     "aos": "^3.0.0-beta.6",
     "nuxt": "^2.6.3",
