--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "AAKRUTI2019",
   "version": "1.0.0",
-  "description": "My striking Nuxt.js project",
+  "description": "AAKRUTI2019 website",
   "author": "SKR",
   "private": true,
   "scripts": {
