--- a/package.json
+++ b/package.json
@@ -12,21 +12,21 @@
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
-    "@nuxtjs/vuetify": "^1.0.0-beta.8",
-    "animate.css": "^3.7.0",
+    "@nuxtjs/vuetify": "^1.8.6",
+    "animate.css": "^3.7.2",
     "aos": "^3.0.0-beta.6",
-    "nuxt": "^2.6.3",
-    "vuetify": "^1.5.5",
-    "vuetify-loader": "^1.2.1"
+    "nuxt": "^2.9.2",
+    "vuetify": "^1.5.18",
+    "vuetify-loader": "^1.3.0"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.8.1",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "nodemon": "^1.18.9",
-    "prettier": "^1.16.4",
+    "@fortawesome/fontawesome-free": "^5.11.2",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "nodemon": "^1.19.3",
+    "prettier": "^1.18.2",
     "push-dir": "^0.4.1",
-    "stylus": "^0.54.5",
+    "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2"
   }
 }
